...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="rJe-aJ-ET4" id="dGx-zT-Rp0"/>
                            <outlet property="delegate" destination="rJe-aJ-ET4" id="YeF-Gg-jMs"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Shakespear's plays" id="AAc-IQ-d2m"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="3H2-Uz-f30" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="886.95652173913049" y="-306.02678571428572"/>
        </scene>
        <!--Navigation Controller-->
...
