//
//  XCTestDemoUITests.swift
//  XCTestDemoUITests
//
//  Created by Amr Hesham on 8/15/20.
//  Copyright © 2020 Amr Hesham. All rights reserved.
//

import XCTest

class XCTestDemoUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        XCUIApplication().activate()

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testInitialStateIsCorrect() {
          //because we made the app start with filter search "Swift" which should appear 7 times so there should be 7 cells
        let table = XCUIApplication().tables
        XCTAssertEqual(table.cells.count, 7, "There should be 7 rows initially")
    }
    
    func testUserFilteringByString() {
        
        let app = XCUIApplication()
        app.navigationBars["Shakespear's plays"].buttons["Search"].tap()
        
        let filterAlert = app.alerts
        
        let textField = filterAlert.textFields.element
        
       textField.typeText("test")
        
        filterAlert.buttons["Filter"].tap()

        
        XCTAssertEqual(app.tables.cells.count, 56, "There should be 56 words matching 'test'")
        
    }

    
    
    func testLaunchPerformance() {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}
